# pdm-default-scripts

./: .gitignore  CHANGELOG.md  README.md  default_scripts.py  pylock.toml  pyproject.toml
.github/workflows/: publish.yml  release.yml  tests.yml
tests/: test_defalult_scripts.py
