[project]
name = "pdm-default-scripts"
version = "0.1.6"
description = "PDM plugin that adds default scripts after `pdm init`"
authors = [{ name = "tepek2", email = "dev@tepek2.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
keywords = ["pdm", "plugin", "default scripts"]
dependencies = ["pdm>=2.26.7"]

[project.entry-points.pdm]
default-scripts = "default_scripts:plugin"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pyright>=1.1.408",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]
release = ["commitizen>=4.13.9"]

[tool.ruff]
line-length = 100
lint.select = ["E4", "E7", "E9", "F", "I"]

[tool.commitizen]
name = "cz_conventional_commits"
changelog_incremental = false
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "pep621"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
lint = "ruff check"
test = "pytest"
type-check = "pyright ."
static-analys = { composite = ["lint", "type-check"] }
coverage = "pytest --cov-fail-under=75"
tests = { composite = ["static-analys", "test"] }

release-create = "cz bump --allow-no-commit --version-files-only --changelog --changelog-to-stdout --yes {args}"
release-commit.shell = """\
    git add pyproject.toml CHANGELOG.md && \
    git commit -m \"release: v$(cz version --project)\" && \
    git tag \"v$(cz version --project)\" && \
    git push && git push --tags
    """
release = { composite = ["release-create {args}", "release-commit"] }
